# swagger.json
@@ -49,6 +49,68 @@
         }
       }
     },
+    "put": {
+      "tags": ["application"],
+      "description": "",
+      "parameters": [
+        {
+          "name": "firstName",
+          "in": "path",
+          "required": true,
+          "type": "string"
+        },
+        {
+          "name": "body",
+          "in": "body",
+          "schema": {
+            "type": "object",
+            "properties": {
+              "firstName": {
+                "example": "any"
+              },
+              "lastName": {
+                "example": "any"
+              },
+              "position": {
+                "example": "any"
+              },
+              "company": {
+                "example": "any"
+              },
+              "salary": {
+                "example": "any"
+              },
+              "recruiter": {
+                "example": "any"
+              },
+              "phone": {
+                "example": "any"
+              },
+              "skills": {
+                "example": "any"
+              }
+            }
+          }
+        }
+      ],
+      "responses": {
+        "204": {
+          "description": "No Content"
+        },
+        "400": {
+          "description": "Bad Request"
+        },
+        "401": {
+          "description": "Unauthorized"
+        },
+        "412": {
+          "description": "Precondition Failed"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    },
     "/auth": {
       "get": {
         "description": "",
